--- a/makers.html
+++ b/makers.html
@@ -2,36 +2,105 @@
 <head>
     <title>Makersworldtechmaker</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Comunidad de Makers Bootcamp FRONT-END javascript" >
+	<meta name="description" content="Comunidad de Makers Bootcamp FRONT-END javascript, incluye carousel creado en clase" >
 	<meta name="autor" content="JesicaGomez" >
-	<meta name="keywords" content="Makers, WTM, Bootcamp, "/>
-
+	<meta name="keywords" content="Makers, WTM, Bootcamp,"/>
 	<link rel="stylesheet" href="makers.css">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel='stylesheet' href='carousel.css'/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
 <img src="maxresdefault.jpg" alt="world tech makers" class="image-ppal">
-<div class="div-title"><img src="logowtm.png" alt="logoWTM" class="logo-title"><h1 class="tex-title">COMUNIDAD MAKER</h1></div>
-<div class="content-ppal">   
+<div class="content-ppal">
+	<div class="div-title"><img src="logowtm.png" alt="logoWTM" class="logo-title"><h1 class="tex-title">COMUNIDAD MAKER</h1></div>
 	<br> <br>
 	<article>
 	<h2>BOOTCAMP FRONT-END DE<strong>JS</strong></h2><br><br>
-	<p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. </p><br><br>
-	    <section class="section-person">
-	    	<div class="div-person" ><h3><strong>MARIA CAMILA</strong><br> MONTEALEGRE</h3><br><img src="foto.jpg" alt="maker"></div>
-	   		<div class="div-person"><h3><strong>JUAN ESTEBAN</strong><br> ALVAREZ</h3><br><img src="foto.jpg" alt="maker"></div>
-	   	   	<div class="div-person"><h3><strong>MILLER </strong><br> OSSA</h3><br><img src="foto.jpg" alt="maker"></div>	    	
-	   	   	<div class="div-person"><h3><strong>MARIA CAMILA</strong><br> MONTEALEGRE</h3><br><img src="foto.jpg" alt="maker"></div>
-	   		<div class="div-person"><h3><strong>JUAN ESTEBAN</strong><br> ALVAREZ</h3><br><img src="foto.jpg" alt="maker"></div>
-	   	   	<div class="div-person"><h3><strong>MILLER </strong><br> OSSA</h3><br><img src="foto.jpg" alt="maker"></div>
-	   	    <div class="div-person" ><h3><strong>MARIA CAMILA</strong><br> MONTEALEGRE</h3><br><img src="foto.jpg" alt="maker"></div>
-	   		<div class="div-person"><h3><strong>JUAN ESTEBAN</strong><br> ALVAREZ</h3><br><img src="foto.jpg" alt="maker"></div>
-	   	   	<div class="div-person"><h3><strong>MILLER </strong><br> OSSA</h3><br><img src="foto.jpg" alt="maker"></div>	    	
-	   	   	<div class="div-person"><h3><strong>MARIA CAMILA</strong><br> MONTEALEGRE</h3><br><img src="foto.jpg" alt="maker"></div>
-	   		<div class="div-person"><h3><strong>JUAN ESTEBAN</strong><br> ALVAREZ</h3><br><img src="foto.jpg" alt="maker"></div>
-	   	   	<div class="div-person"><h3><strong>MILLER </strong><br> OSSA</h3><br><img src="foto.jpg" alt="maker"></div>
-	    </section>
-	</article>
-</div>
+	<p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.Lina Maria Montaño Ramirez</p><br><br>
+
+	<section class="section-person">
+		 <div class="carousel-grid">
+	      <figure class="carousel-item person">
+	        <img src="foto.jpg" alt="maker">
+	        <figcaption><h3><strong>LEIDY JOHANA</strong><br> GALVAN</h3><br></figcaption>
+	       </figure>
+	       <figure class="carousel-item person">
+	        <img src="foto.jpg" alt="maker">
+	        <figcaption><h3><strong>LINA MARIA</strong><br> MONTAÑO</h3><br></figcaption>
+	       </figure>
+	       <figure class="carousel-item person">
+	        <img src="foto.jpg" alt="maker">
+	        <figcaption><h3><strong>ESTEFANY</strong><br>AGUILAR</h3><br></figcaption>
+	       </figure>
+	       <figure class="carousel-item person">
+	        <img src="foto.jpg" alt="maker">
+	        <figcaption><h3><strong>SARA</strong><br> SANTACRUZ</h3><br></figcaption>
+	       </figure>
+	       <figure class="carousel-item person">
+	        <img src="foto.jpg" alt="maker">
+	        <figcaption><h3><strong>JUAN ESTEBAN</strong><br> ALVAREZ</h3><br></figcaption>
+	       </figure>
+	       <figure class="carousel-item person">
+	        <img src="foto.jpg" alt="maker">
+	        <figcaption><h3><strong>ALEJANDRO</strong><br>YEPES</h3><br></figcaption>
+	       </figure>
+	       <figure class="carousel-item person">
+	        <img src="foto.jpg" alt="maker">
+	        <figcaption><h3><strong>JOHN ALEXANDER</strong><br>RODRIGUEZ</h3><br></figcaption>
+	       </figure>
+	       <figure class="carousel-item person">
+	        <img src="foto.jpg" alt="maker">
+	        <figcaption><h3><strong>WILLIAN ANDRES</strong><br> SERNA</h3><br></figcaption>
+	       </figure>
+	       <figure class="carousel-item person">
+	        <img src="foto.jpg" alt="maker">
+	        <figcaption><h3><strong>SERGIO</strong><br>QUINTERO</h3><br></figcaption>
+	       </figure>
+	       <figure class="carousel-item person">
+	        <img src="foto.jpg" alt="maker">
+	        <figcaption><h3><strong>JUAN SEBASTIAN</strong><br> LOPEZ</h3><br></figcaption>
+	       </figure>
+	       <figure class="carousel-item person">
+	        <img src="foto.jpg" alt="maker">
+	        <figcaption><h3><strong>JHONATAN</strong><br>OSORNO</h3><br></figcaption>
+	       </figure>
+	       <figure class="carousel-item person">
+	        <img src="foto.jpg" alt="maker">
+	        <figcaption><h3><strong>MILLER</strong><br>OSSA</h3><br></figcaption>
+	       </figure>
+	       <figure class="carousel-item person">
+	        <img src="foto.jpg" alt="maker">
+	        <figcaption><h3><strong>LUISA</strong><br>VARGAS</h3><br></figcaption>
+	       </figure>
+	       <figure class="carousel-item person">
+	        <img src="foto.jpg" alt="maker">
+	        <figcaption><h3><strong>ALVARO JAVIER</strong><br>GUERRERO</h3><br></figcaption>
+	       </figure>
+	       <figure class="carousel-item person">
+	        <img src="foto.jpg" alt="maker">
+	        <figcaption><h3><strong>MARIA CAMILA</strong><br>MONTEALEGRE</h3><br></figcaption>
+	       </figure>
+	    </div>
+    </section>
+
+    <div class="carousel-modal hidden">
+      <div class="carousel-modal-close"></div>
+      <div class="carousel-modal-controls">
+        <span class="carousel-modal-prev">
+          <i class="fa fa-chevron-left" aria-hidden="true"></i>
+        </span>
+        <span class="carousel-modal-next">
+          <i class="fa fa-chevron-right" aria-hidden="true"></i>
+        </span>
+      </div>
+      <div class="carousel-modal-content">
+      </div>
+    </div>
+
+</article>
 	
+</div>
+    <script src="makes.js"></script>
 </body>
 </html>
