change image in modal

--- a/makers.html
+++ b/makers.html
@@ -22,64 +22,81 @@
 	<section class="section-person">
 		 <div class="carousel-grid">
 	      <figure class="carousel-item person">
-	        <img src="foto.jpg" alt="maker">
-	        <figcaption><h3><strong>LEIDY JOHANA</strong><br> GALVAN</h3><br></figcaption>
+	        <img class="img-grid" src="foto.jpg" alt="maker">
+	        <img class="img-modal" src="https://creators-images.vice.com/content-images/contentimage/no-slug/e4e149d87b4f8f5330c1e3c79c24ea6f.jpg?crop=1xw:0.7976772616136919xh;center,center&resize=1050:*" alt="maker">
+	        <figcaption class="grid"><h3>LEIDY JOHANA<br> GALVAN</h3><br></figcaption>
+	        <figcaption class="modal">Diseñadora gráfica</figcaption>
 	       </figure>
 	       <figure class="carousel-item person">
-	        <img src="foto.jpg" alt="maker">
-	        <figcaption><h3><strong>LINA MARIA</strong><br> MONTAÑO</h3><br></figcaption>
+	        <img class="img-grid" src="foto.jpg" alt="maker">
+	        <img class="img-modal" src="https://creators-images.vice.com/content-images/contentimage/no-slug/e4e149d87b4f8f5330c1e3c79c24ea6f.jpg?crop=1xw:0.7976772616136919xh;center,center&resize=1050:*" alt="maker">
+	        <figcaption><h3>LINA MARIA<br> MONTAÑO</h3><br></figcaption>
 	       </figure>
 	       <figure class="carousel-item person">
-	        <img src="foto.jpg" alt="maker">
-	        <figcaption><h3><strong>ESTEFANY</strong><br>AGUILAR</h3><br></figcaption>
+	        <img class="img-grid" src="foto.jpg" alt="maker">
+	        <img class="img-modal" src="https://creators-images.vice.com/content-images/contentimage/no-slug/e4e149d87b4f8f5330c1e3c79c24ea6f.jpg?crop=1xw:0.7976772616136919xh;center,center&resize=1050:*" alt="maker">
+	        <figcaption><h3>ESTEFANY<br>AGUILAR</h3><br></figcaption>
 	       </figure>
 	       <figure class="carousel-item person">
-	        <img src="foto.jpg" alt="maker">
-	        <figcaption><h3><strong>SARA</strong><br> SANTACRUZ</h3><br></figcaption>
+	        <img class="img-grid" src="foto.jpg" alt="maker">
+	        <img class="img-modal" src="https://creators-images.vice.com/content-images/contentimage/no-slug/e4e149d87b4f8f5330c1e3c79c24ea6f.jpg?crop=1xw:0.7976772616136919xh;center,center&resize=1050:*" alt="maker">
+	        <figcaption><h3>SARA<br> SANTACRUZ</h3><br></figcaption>
 	       </figure>
 	       <figure class="carousel-item person">
-	        <img src="foto.jpg" alt="maker">
-	        <figcaption><h3><strong>JUAN ESTEBAN</strong><br> ALVAREZ</h3><br></figcaption>
+	        <img class="img-grid" src="foto.jpg" alt="maker">
+	        <img class="img-modal" src="https://creators-images.vice.com/content-images/contentimage/no-slug/e4e149d87b4f8f5330c1e3c79c24ea6f.jpg?crop=1xw:0.7976772616136919xh;center,center&resize=1050:*" alt="maker">
+	        <figcaption><h3>JUAN ESTEBAN<br> ALVAREZ</h3><br></figcaption>
 	       </figure>
 	       <figure class="carousel-item person">
-	        <img src="foto.jpg" alt="maker">
-	        <figcaption><h3><strong>ALEJANDRO</strong><br>YEPES</h3><br></figcaption>
+	        <img class="img-grid" src="foto.jpg" alt="maker">
+	        <img class="img-modal" src="https://creators-images.vice.com/content-images/contentimage/no-slug/e4e149d87b4f8f5330c1e3c79c24ea6f.jpg?crop=1xw:0.7976772616136919xh;center,center&resize=1050:*" alt="maker">
+	        <figcaption><h3>ALEJANDRO<br>YEPES</h3><br></figcaption>
 	       </figure>
 	       <figure class="carousel-item person">
-	        <img src="foto.jpg" alt="maker">
-	        <figcaption><h3><strong>JOHN ALEXANDER</strong><br>RODRIGUEZ</h3><br></figcaption>
+	        <img class="img-grid" src="foto.jpg" alt="maker">
+	        <img class="img-modal" src="https://creators-images.vice.com/content-images/contentimage/no-slug/e4e149d87b4f8f5330c1e3c79c24ea6f.jpg?crop=1xw:0.7976772616136919xh;center,center&resize=1050:*" alt="maker">
+	        <figcaption><h3>JOHN ALEXANDER<br>RODRIGUEZ</h3><br></figcaption>
 	       </figure>
 	       <figure class="carousel-item person">
-	        <img src="foto.jpg" alt="maker">
-	        <figcaption><h3><strong>WILLIAN ANDRES</strong><br> SERNA</h3><br></figcaption>
+	        <img class="img-grid" src="foto.jpg" alt="maker">
+	        <img class="img-modal" src="https://creators-images.vice.com/content-images/contentimage/no-slug/e4e149d87b4f8f5330c1e3c79c24ea6f.jpg?crop=1xw:0.7976772616136919xh;center,center&resize=1050:*" alt="maker">
+	        <figcaption><h3>WILLIAN ANDRES<br> SERNA</h3><br></figcaption>
 	       </figure>
 	       <figure class="carousel-item person">
-	        <img src="foto.jpg" alt="maker">
-	        <figcaption><h3><strong>SERGIO</strong><br>QUINTERO</h3><br></figcaption>
+	        <img class="img-grid" src="foto.jpg" alt="maker">
+	        <img class="img-modal" src="https://creators-images.vice.com/content-images/contentimage/no-slug/e4e149d87b4f8f5330c1e3c79c24ea6f.jpg?crop=1xw:0.7976772616136919xh;center,center&resize=1050:*" alt="maker">
+	        <figcaption><h3>SERGIO<br>QUINTERO</h3><br></figcaption>
 	       </figure>
 	       <figure class="carousel-item person">
-	        <img src="foto.jpg" alt="maker">
-	        <figcaption><h3><strong>JUAN SEBASTIAN</strong><br> LOPEZ</h3><br></figcaption>
+	        <img class="img-grid" src="foto.jpg" alt="maker">
+	        <img class="img-modal" src="https://creators-images.vice.com/content-images/contentimage/no-slug/e4e149d87b4f8f5330c1e3c79c24ea6f.jpg?crop=1xw:0.7976772616136919xh;center,center&resize=1050:*" alt="maker">
+	        <figcaption><h3>JUAN SEBASTIAN<br> LOPEZ</h3><br></figcaption>
 	       </figure>
 	       <figure class="carousel-item person">
-	        <img src="foto.jpg" alt="maker">
-	        <figcaption><h3><strong>JHONATAN</strong><br>OSORNO</h3><br></figcaption>
+	        <img class="img-grid" src="foto.jpg" alt="maker">
+	        <img class="img-modal" src="https://creators-images.vice.com/content-images/contentimage/no-slug/e4e149d87b4f8f5330c1e3c79c24ea6f.jpg?crop=1xw:0.7976772616136919xh;center,center&resize=1050:*" alt="maker">
+	        <figcaption class="grid"><h3>JHONATAN<br>OSORNO</h3><br></figcaption>
+	        <figcaption class="modal"><h3>Siempre ve más allá</h3></figcaption>
 	       </figure>
 	       <figure class="carousel-item person">
-	        <img src="foto.jpg" alt="maker">
-	        <figcaption><h3><strong>MILLER</strong><br>OSSA</h3><br></figcaption>
+	        <img class="img-grid" src="foto.jpg" alt="maker">
+	        <img class="img-modal" src="https://creators-images.vice.com/content-images/contentimage/no-slug/e4e149d87b4f8f5330c1e3c79c24ea6f.jpg?crop=1xw:0.7976772616136919xh;center,center&resize=1050:*" alt="maker">
+	        <figcaption><h3>MILLER<br>OSSA</h3><br></figcaption>
 	       </figure>
 	       <figure class="carousel-item person">
-	        <img src="foto.jpg" alt="maker">
-	        <figcaption><h3><strong>LUISA</strong><br>VARGAS</h3><br></figcaption>
+	        <img class="img-grid" src="foto.jpg" alt="maker">
+	        <img class="img-modal" src="https://creators-images.vice.com/content-images/contentimage/no-slug/e4e149d87b4f8f5330c1e3c79c24ea6f.jpg?crop=1xw:0.7976772616136919xh;center,center&resize=1050:*" alt="maker">
+	        <figcaption><h3>LUISA<br>VARGAS</h3><br></figcaption>
 	       </figure>
 	       <figure class="carousel-item person">
-	        <img src="foto.jpg" alt="maker">
-	        <figcaption><h3><strong>ALVARO JAVIER</strong><br>GUERRERO</h3><br></figcaption>
+	        <img class="img-grid" src="foto.jpg" alt="maker">
+	        <img class="img-modal" src="https://creators-images.vice.com/content-images/contentimage/no-slug/e4e149d87b4f8f5330c1e3c79c24ea6f.jpg?crop=1xw:0.7976772616136919xh;center,center&resize=1050:*" alt="maker">
+	        <figcaption><h3>ALVARO JAVIER<br>GUERRERO</h3><br></figcaption>
 	       </figure>
 	       <figure class="carousel-item person">
-	        <img src="foto.jpg" alt="maker">
-	        <figcaption><h3><strong>MARIA CAMILA</strong><br>MONTEALEGRE</h3><br></figcaption>
+	        <img class="img-grid" src="foto.jpg" alt="maker">
+	        <img class="img-modal" src="https://creators-images.vice.com/content-images/contentimage/no-slug/e4e149d87b4f8f5330c1e3c79c24ea6f.jpg?crop=1xw:0.7976772616136919xh;center,center&resize=1050:*" alt="maker">
+	        <figcaption><h3>MARIA CAMILA<br>MONTEALEGRE</h3><br></figcaption>
 	       </figure>
 	    </div>
     </section>
